fix: nextjs scroll restoration issue by adding ScrollToTopHelper and removing overflow-clip in layout

--- a/src/app/(frontend)/globals-compiled.css
+++ b/src/app/(frontend)/globals-compiled.css
@@ -1285,6 +1285,9 @@
   .overflow-x-auto {
     overflow-x: auto;
   }
+  .overflow-x-hidden {
+    overflow-x: hidden;
+  }
   .overflow-y-auto {
     overflow-y: auto;
   }
